
2005-09-26    <tino@firebird.03.softkill.net>

	* setuptino.sh: autoguessing project name implemented

2005-09-07    <tino@firebird.03.softkill.net>

	* setuptino.sh: extended to create directory or softlink,
	commandline args are optional (needed if you create files).

2005-09-05    <tino@firebird.03.softkill.net>

	* file.h (tino_file_read_line_x): added

2005-08-19    <tino@firebird.03.softkill.net>

	* proc.h: tino_wait_child corrected for socklinger release

2005-08-14    <tino@firebird.03.softkill.net>

	* setuptino.sh (DIET): diet option added, just create directory
	diet

2005-08-08    <tino@firebird.03.softkill.net>

	* crypthash.hh: generic structures and templates: md5 and sha

2005-08-02    <tino@firebird.03.softkill.net>

	* file.h, filetool.h, getopt.h, str.h: now compiles under C++

	* Makefile.awk: added _ and + to the allowed characters, such that
	-lstdc++ can be recognized in STD_LDLIBS

	* Makefile.tino.dist: comment "CXX=diet/tinodiet.sh ++" added

2005-08-01    <tino@firebird.03.softkill.net>

	* Makefile.proto, Makefile.d.proto, Makefile-tino.sh: started to
	support .cc/.hh files.

	* filetool.h (tino_file_filenameptr): added

2005-07-31    <tino@firebird.03.softkill.net>

	* setuptino.sh (TARG): added directory copy capability

2005-07-30    <tino@firebird.03.softkill.net>

	* Makefile-tar.sh (VERS): Added test if file created by
	setuptino.sh are still unchanged on 'make dist' or 'make tar'

	* setuptino.sh, COPYING.dist, VERSION.dist, DESCRIPTION.dist,
	ANNOUNCE.dist: added

2005-06-28    <tino@firebird.03.softkill.net>

	* iow.h, iow_socket.h: added

	* threads.h: started minimal thread support

	* sock.h (tino_sock_getaddr): IPv6 now supported (hopefully) and
	shall be thread safe (see threads.h)
	(tino_sock_error, tino_sock_error_unlock, tino_sock_error_lock):
	added error workaround

	* file.h (tino_file_close): added (ignores EINTR on close)

2005-06-22    <tino@firebird.03.softkill.net>
